# parse-paper-mcp

./: .gitignore  README.md  pyproject.toml
parse_paper_mcp/: __init__.py  image_utils.py  parser.py  server.py
tests/: __init__.py  test_parser.py
